# fastapi_framework

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  run.sh  settings.yaml  test.py
app/: __init__.py  main.py  middleware.py  server.py
app/apiserver/: __init__.py  context.py  ctx.py  database.py  exception.py  handler.py  logger.py  middleware.py  server.py
app/config/: __init__.py  config.py  default.yaml  general.yaml  schema.py  setting.py
app/dependencies/: __init__.py  demo.py
app/interface/: __init__.py
app/interface/api/: myapp.py
app/interface/cache/: local.py  redis.py
app/interface/models/: __init__.py  tables.py
app/interface/models/repo/: models.py  task_repo.py  user_repo.py
app/interface/mq/: kafka.py
app/interface/repo/: __init__.py  _base.py  _tables.py  item.py  item_repo.py  models.py  order.py  order_repo.py  task_repo.py  user.py  user_repo.py
app/interface/utilities/: transaction.py
app/resource/: demo.txt
app/router/: __init__.py  stream_router.py  system.py  system_router.py  task_router.py  user.py  user_router.py
app/schema/: base.py  common.py  const.py  enum.py  stream.py  task.py  user.py
app/schema/request/: base.py
app/schema/response/: base.py
app/schema/schemas/: system.py  task.py  user.py
app/service/: mq_service.py  stream_service.py  system.py  system_service.py  task_service.py  user.py  user_service.py
app/utils/: example.py  file_manager.py  file_parser.py  obs_file.py
