[tool.poetry]
name = "fastapi-framework"
version = "0.1.0"
description = ""
authors = ["Hang"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7.1"
fastapi = "^0.110.2"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
