[tool.poetry]
name = "fastapi-framework"
version = "0.1.0"
description = ""
authors = ["Hang"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7.1"
fastapi = "^0.110.2"
pandas = "^2.2.2"
kafka-python = "^2.0.2"
redis = "^5.0.4"
dynaconf = "^3.2.5"
loguru = "^0.7.2"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
