[tool.poetry]
name = "fastapi-framework"
version = "0.1.0"
description = ""
authors = ["Hang"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7.1"
fastapi = "^0.110.2"
pandas = "^2.2.2"
kafka-python = "^2.0.2"
redis = "^5.0.4"
dynaconf = "^3.2.5"
loguru = "^0.7.2"
sqlalchemy = "^2.0.30"
sqlparse = "^0.5.0"
httpx = "^0.27.0"
uvicorn = "^0.29.0"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
python-multipart = "^0.0.9"
greenlet = "^3.0.3"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
